bugfix with bg, positions and overflow

--- a/src/app/question/question.component.scss
+++ b/src/app/question/question.component.scss
@@ -26,6 +26,7 @@
 .tdr-component {
   padding: 0!important;
   position: absolute;
+  overflow:hidden;
   left: 0;
   right: 0;
   margin-top: 0px;
